# git-verify-pack-easy-version

./: .gitignore  CMakeLists.txt  README.md
src/: file_util.cpp  file_util.hpp  index_file.cpp  index_file.hpp  main.cpp  objects.hpp  pack_file.cpp  pack_file.hpp  verify_pack.cpp  verify_pack.hpp
